@startuml

skinparam componentStyle uml2

:Letztverbraucher:
:Lieferant: as Lieferant
node "Smart Meter Gateway" as Smgw
node "Zähler 1" as Meter1
node "Zähler n" as Meter2

frame TRuDI {
    component "TRuDI.Backend" as Backend
    component  "TRuDI.Frontend" as Frontend 
    component "HAN-Adapter" as HanAdapter
    component "TAF-Adapter" as TafAdapter

    interface "IHanAdapter" as IHanAdapter
    interface "ITafAdapter" as ITafAdapter

    note "HTTP" as NoteFrontendBackend

    Frontend -- NoteFrontendBackend
    NoteFrontendBackend --> Backend

    Backend --> IHanAdapter
    IHanAdapter -- HanAdapter

    Backend --> ITafAdapter
    ITafAdapter -- TafAdapter
}

note "TLS über Ethernet-Verbindung" as NoteHanToGatewayConnection

file "Lieferanten-XML-Datei" as LieferantenXml
Lieferant --> LieferantenXml 
LieferantenXml --> Frontend
Letztverbraucher --> Frontend
HanAdapter -- NoteHanToGatewayConnection
NoteHanToGatewayConnection --> Smgw
Smgw --> Meter1
Smgw --> Meter2

@enduml

